# melodycomp

./: .gitignore  README.md  app.py  dockerfile  pyproject.toml  requirements.txt
configs/: config_example.yaml
knowledge_base/: chords.json  finetuning_data.json  scales.yaml
knowledge_base/genres/: chicago_house.md  detroit_techno.md  idm.md  shoegaze.md  trip_hop.md
melodycomp/: __init__.py  agent.py  gen_chord_lib.py  local_llm.py  melody_generator.py
